# neofi-backend-assignment

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 07b6cf23bd15_initial_create.py  0b952a98b16c_initial_migration.py  1b950deef6f2_create_all_tables_indexes.py  25ceaad7b4fb_add_useful_event_indexes.py  513147f027e8_create_users_table.py  5608a0417b53_add_version_number_and_updated_at_to_.py  57aa312577d5_add_version_number_updated_at_audit_.py  5e7a2618bd07_add_indexes_to_audit_logs_and_event_.py  6aa1e37d4920_add_permissions_and_versioning_tables.py  814ab053c6b4_add_indexes_for_performance.py  afe837e8df4e_create_audit_logs_table.py  e6ba4bd95f1f_initial_schema.py  f5f647bef18f_initial_schema.py
app/: dependencies.py  main.py  models.py  schemas.py
app/core/: logging.py  security.py
app/db/: session.py
app/middleware/: audit.py  msgpack.py  request_logging.py  security.py
app/routers/: auth.py  events.py  health.py  permissions.py  test.py  versions.py  websocket.py
app/templates/: websocket_test.html
app/utils/: conflicts.py  notifications.py  sync_manager.py  versioning.py
tests/: conftest.py  test_auth.py  test_events.py  test_health.py  test_permissions.py  test_versions.py
