[project]
name = "neofi-backend"
version = "0.1.0"
description = "NeoFi Collaborative Event API (FastAPI)"
authors = [
    {name = "Vipransh Agarwal",email = "aga.vishu21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",    "psutil (>=7.0.0,<8.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.5,<0.24.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "aiosqlite (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
