[tool.poetry]
name = "neofi-backend"
version = "0.1.0"
description = "NeoFi Collaborative Event API (FastAPI)"
authors = [
    "Vipransh Agarwal <aga.vishu21@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.41,<3.0.0"}
alembic = ">=1.15.2,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-dotenv = ">=1.1.0,<2.0.0"
pydantic = {extras = ["email"], version = ">=2.11.4,<3.0.0"}
bcrypt = ">=4.3.0,<5.0.0"
redis = ">=6.1.0,<7.0.0"
slowapi = ">=0.1.9,<0.2.0"
msgpack = ">=1.1.0,<2.0.0"
fastapi-cache2 = ">=0.2.2,<0.3.0"
aioredis = ">=2.0.1,<3.0.0"
websockets = ">=15.0.1,<16.0.0"
python-json-logger = ">=3.3.0,<4.0.0"
psutil = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
